@@ -1,3 +1,9 @@
+2004-06-04  lav
+
+	* user.cc: initialize newname in load and save-as.
+	* keymapdf.cc: add kUND, krdo, kRDO key bindings.
+	* kern.cc: (ReplaceBlock) mark buffer modified when not mmapped.
+
 2004-05-20  lav
 
 	* undo.cc: fixed malloc(0) and memory allocation error handling;
